fix minor ui issue on mobile

--- a/src/css/extra.css
+++ b/src/css/extra.css
@@ -36,6 +36,11 @@ table td:nth-child(3) {
     .two-inline-datepicker > div {
         width: 100%;
     }
+
+    .md-content__inner label {
+        display: block;
+        width: 100%;
+    }
 }
 
 .one-inline-datepicker {
